--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 django==1.6.5
-django-mongokit
+django-mongokit==0.2.6
 django-registration==1.0
-django-ratings
-django-pagination
-django-notification
-python-magic
-Pillow
-ox
-django-passwords
+django-ratings==0.3.7
+django-pagination==1.0.7
+django-notification==1.2.0
+python-magic==0.4.6
+Pillow==2.6.1
+ox==2.1.651
+django-passwords==0.2.0
 South==0.8.4
 django-extensions==1.3.3
 django-reversion==1.8.0
-gunicorn
-markdown
+gunicorn==19.0.0
+markdown==2.4.1
 django-json-rpc==0.6.3
 https://bitbucket.org/zalew/django-online-status/get/tip.zip
 git+https://github.com/anujag/django-registration-email.git
-stemming
-numpy
+stemming==1.0.1
+numpy==1.9.0
 python-memcached
 django-memcache-admin
 pandora-client==0.2.197
 pymongo==2.8
-django-simple-captcha
-django-celery
+django-simple-captcha==0.4.5
+django-celery==3.1.16
