--- a/gnowsys-ndf/bower.json
+++ b/gnowsys-ndf/bower.json
@@ -45,10 +45,10 @@
     "datatables-plugins": "#1.0.1",
     "DataTables": "#1.10.4",
     "videojs": "#4.11.4",
-    "epub.js": "0.2.5",
+    "epub.js": "#0.2.5",
     "font-awesome": "#4.4.0",
     "ckeditor": "#4.5.6",
-    "modernizr": "2.8.3",
+    "modernizr": "#2.8.3",
     "handlebars": "#4.0.5"
   },
   "resolutions": {
