--- a/gnowsys-ndf/bower.json
+++ b/gnowsys-ndf/bower.json
@@ -49,7 +49,8 @@
     "font-awesome": "#4.4.0",
     "ckeditor": "#4.5.6",
     "modernizr": "#2.8.3",
-    "handlebars": "#4.0.5"
+    "handlebars": "#4.0.5",
+    "pace": "#1.0.2"
   },
   "resolutions": {
     "jquery": ">= 2.1.0"
