--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ django-pagination==1.0.7
 django-notification==1.2.0
 python-magic==0.4.6
 Pillow==2.6.1
-ox==2.1.651
 django-passwords==0.2.0
 South==0.8.4
 django-extensions==1.3.3
@@ -23,4 +22,8 @@ django-memcache-admin
 pandora-client==0.2.197
 pymongo==2.8
 django-simple-captcha==0.4.5
+hashfs==0.6.0
+ox>=2.1.651
+celery==3.1.19
 django-celery==3.1.16
+django-mailbox==4.4.1
