--- a/gnowsys-ndf/bower.json
+++ b/gnowsys-ndf/bower.json
@@ -51,7 +51,8 @@
     "handlebars": "#4.0.5",
     "pace": "#1.0.2",
     "jquery": "#2.2.1",
-    "blueimp-canvas-to-blob" :"#3.3.0"
+    "blueimp-canvas-to-blob" :"#3.3.0",
+    "jsmol" :"#1.1.0"
   },
   "resolutions": {
     "jquery": "2.2.1"
