--- a/gnowsys-ndf/bower.json
+++ b/gnowsys-ndf/bower.json
@@ -51,8 +51,9 @@
     "handlebars": "#4.0.5",
     "pace": "#1.0.2",
     "jquery": "#2.2.1",
-    "blueimp-canvas-to-blob" :"#3.3.0",
-    "jsmol" :"#1.1.0"
+    "blueimp-canvas-to-blob": "#3.3.0",
+    "jsmol": "#1.1.0",
+    "rubik-googlefont": "#a23ec91574"
   },
   "resolutions": {
     "jquery": "2.2.1"
