--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,9 @@ django-celery==3.1.16
 django-mailbox==4.4.1
 Fabric==1.12.0
 pathlib2==2.2.1
+# pycrypto may need sometimes for Fabric
+# pycrypto
+
 # QBANK-LITE REQ: https://github.com/CLIxIndia-Dev/qbank-lite/blob/master/requirements.txt
 # also make sure following are updated w.r.t qbank repo
 beautifulsoup4==4.4.1
