--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ pathlib2==2.2.1
 
 # QBANK-LITE REQ: https://github.com/CLIxIndia-Dev/qbank-lite/blob/master/requirements.txt
 # also make sure following are updated w.r.t qbank repo
+dlkit==0.3.7
 beautifulsoup4==4.4.1
 cffi==1.7.0
 cryptography==1.4
@@ -49,7 +50,7 @@ nose==1.3.7
 Paste==2.0.3
 pyasn1==0.1.9
 pycparser==2.14
-PyInstaller==3.2
+PyInstaller==3.2.1
 pyOpenSSL==16.0.0
 signit==0.3.0
 six==1.10.0
