--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ https://bitbucket.org/zalew/django-online-status/get/tip.zip
 git+https://github.com/anujag/django-registration-email.git
 stemming==1.0.1
 numpy==1.9.0
-python-memcached
+python-memcached==1.58
 django-memcache-admin
 # pandora-client==0.2.197
 pymongo==2.8
@@ -34,7 +34,7 @@ pathlib2==2.2.1
 
 # QBANK-LITE REQ: https://github.com/CLIxIndia-Dev/qbank-lite/blob/master/requirements.txt
 # also make sure following are updated w.r.t qbank repo
-dlkit==0.3.7
+dlkit==0.5.1
 beautifulsoup4==4.4.1
 cffi==1.7.0
 cryptography==1.4
