--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ numpy==1.9.0
 python-memcached==1.58
 django-memcache-admin
 # pandora-client==0.2.197
-pymongo==2.8
 django-simple-captcha==0.4.5
 hashfs==0.6.0
 ox>=2.1.651
@@ -60,3 +59,6 @@ waitress==0.8.10
 bs4==0.0.1
 html==1.16
 checksumdir==1.1.0
+
+# version needed to overwrite on all above intermediate installs
+pymongo==2.8
