--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ waitress==0.8.10
 bs4==0.0.1
 html==1.16
 checksumdir==1.1.0
-
 # version needed to overwrite on all above intermediate installs
 pymongo==2.8
+elasticsearch==5.4.0
+
