--- a/gnowsys-ndf/bower.json
+++ b/gnowsys-ndf/bower.json
@@ -55,7 +55,8 @@
     "jsmol": "#1.1.0",
     "rubik-googlefont": "#a23ec91574",
     "MathJax": "2.7.0",
-    "jquery-backstretch": "^2.1.15"
+    "jquery-backstretch": "^2.1.15",
+    "datatables-rowsgroup": "1.0.0"
   },
   "resolutions": {
     "jquery": "2.2.1"
